# dundie-rewards

./: .flake8  .gitignore  404.html  CONTRIBUTING.MD  MANIFEST.in  Makefile  README.md  SQLite  alembic.ini  conftest.py  gitignore  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  sitemap.xml  sql_example.db  sql_example.py  sqla_example.py  sqlmodel.db  sqlmodel_example.py
.github/workflows/: main.yml
assets/: database.db  database.json  database_exemplo.json  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  roadmap.md
dundie/: __init__.py  __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: auth.py  db.py  email.py  exchange.py  log.py  session.py  user.py
how_to_install/: index.html
how_to_use/: index.html
integration/: __init__.py  conftest.py  constants.py  test_cli_commands.py  test_load.py
migrations/versions/: 39a904d49f7b_adicionado_o_campo_currency_na_tabela_.py  6279646337bf_inicial.py
roadmap/: index.html
scripts/: migrate_password.py  restore_original_passwords.py
search/: search_index.json
tests/: conftest.py  conftests.py  constants.py  test_add.py  test_database.py  test_load.py  test_read.py
tests/assets/: people.csv
tests/assets/unit/: test_auth.py  test_balance_statement.py  test_transfer.py
tmp/: database.db
