[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dundie"
version = "0.1.0"
description = "Reward Point System for Dunder Mifflin"
authors = [
    {name = "Seu Nome", email = "seu@email.com"}
]
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich-click>=1.7",
    "pymailtm>=1.1.1",
     "pwdlib[argon2]",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "ptw>=1.0",  # Corrigido: 1.0 em vez de 1.15
    "flake8>=6.0",
    "black>=24.0",
    "isort>=5.12",
]

test = [  # ADICIONADO
    "pytest>=6.0",
    "pytest-xdist>=3.0",
    "pytest-forked>=1.6",
]

[project.scripts]
dundie = "dundie.__main__:main"

[tool.setuptools]
packages = ["dundie"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
    "integration",
]

markers = [
    "unit: Testes unitários",
    "integration: Testes de integração",
    "high: Prioridade alta",
    "medium: Prioridade média",
    "low: Prioridade baixa"
]

[tool.flake8]
exclude = [".venv", "build"]
max-line-length = 79

[tool.black]
line-length = 79
target-version = ["py36", "py37"]
exclude = '''
/(
      \.eggs
    | \.git
    | \.venv
    | _build
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
src_paths = ["dundie", "tests", "integration"]
multi_line_output = 3