[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dundie"
version = "0.1.0"
description = "Reward Point System for Dunder Mifflin"
authors = [
    {name = "Seu Nome", email = "seu@email.com"}
]
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich-click>=1.7",
    "pymailtm>=1.1.1",
    "pwdlib[argon2]",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.8",
    "httpx>=0.24.0",  # ADICIONADO
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "ptw>=1.0",
    "flake8>=6.0",
    "black>=24.0",
    "isort>=5.12",
]

test = [
    "pytest>=6.0",
    "pytest-xdist>=3.0",
    "pytest-forked>=1.6",
    "httpx>=0.24.0",  # ADICIONADO
]

[project.scripts]
dundie = "dundie.__main__:main"

[tool.setuptools]
packages = ["dundie"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
    "integration",
]

markers = [
    "unit: Testes unitários",
    "integration: Testes de integração",
    "high: Prioridade alta",
    "medium: Prioridade média",
    "low: Prioridade baixa"
]

# CONFIGURAÇÕES DO FLAKE8 - ATUALIZADAS
[tool.flake8]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "migrations",
    "scripts",
    "integration",
    "tests/assets/unit",
]
max-line-length = 120
ignore = [
    "E402",
    "F401",
    "F841",
    "F541",
    "W292",
    "W293",
    "F811",
    "E501",
]

# CONFIGURAÇÕES DO BLACK - ATUALIZADAS
[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.eggs
    | \.git
    | \.venv
    | _build
    | build
    | dist
    | migrations
    | scripts
)/
'''

# CONFIGURAÇÕES DO ISORT
[tool.isort]
profile = "black"
src_paths = ["dundie", "tests", "integration"]
multi_line_output = 3
line_length = 120
skip_glob = ["migrations/*", "scripts/*"]